# statsbomb-demo

./: .gitignore  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
fetchers/: events.py  helpers.py  matches.py
sql/: events.sql  import.sql  init.sql  lineups.sql  matches.sql
statsbomb_demo/: cli.py  competitions.py  db.py  dumper.py  events.py  helpers.py  lineups.py  matches.py
tests/: test_clean_str.py
