[tool.poetry]
name = "statsbomb-demo"
version = "0.1.0"
description = ""
authors = ["MitchellWeg <mitchell.w@live.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.10.2"
requests = "^2.31.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
